--- a/Encrypter/templates/imagepasswordpage.html
+++ b/Encrypter/templates/imagepasswordpage.html
@@ -59,8 +59,19 @@
             font-size: 15px;
         }
     </style>
+    <link rel="stylesheet" href="../static/css/dashboardpage.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
+
     {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
