--- a/Encrypter/static/css/accountcontrolspage.css
+++ b/Encrypter/static/css/accountcontrolspage.css
@@ -6,7 +6,7 @@
 
 }
 
-#change_password, #delete_account {
+#change_password, #change_name, #delete_account {
     padding-left:20px;
     padding-right: 20px;
     width:300px;
