--- a/Encrypter/templates/viewimage.html
+++ b/Encrypter/templates/viewimage.html
@@ -11,15 +11,26 @@
 
     <style>
         #dashboardpage {
-            display:block;
-            margin-left:45%;
-            text-align:center;
-            width:100px;
-            padding-top:40px;
+            display: block;
+            margin-left: 45%;
+            text-align: center;
+            width: 100px;
+            padding-top: 40px;
         }
     </style>
+    <link rel="stylesheet" href="../static/css/dashboardpage.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
+
     <h2 style="text-align:center; margin-top:40px;">Here's your image</h2><br /><br />
     <div id="image_box">
         <div>
