--- a/Encrypter/templates/viewimagepasswordpage.html
+++ b/Encrypter/templates/viewimagepasswordpage.html
@@ -59,9 +59,18 @@
             font-size:15px;
         }
     </style>
-    
+    <link rel="stylesheet" href="../static/css/dashboardpage.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
 
     {% block content %}
     <div class="container">
@@ -75,7 +84,7 @@
         {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
-   
+
     <form action="/viewimage" method="post">
         <div id="form">
             <label id="imageidtext">Image Id</label><br />
@@ -95,9 +104,9 @@
 
             <a id="dashboardpage" href="/dashboardpage" class="btn btn-primary">Return to Dashboard</a>
         </div>
-        
+
     </form><br /><br />
 
-    
+
 </body>
 </html>
